Added 'jenkins' user support